--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
   --background-secondary: rgb(250, 251, 255);
 
   --background-primary: rgb(255, 255, 255);
+  --background-primary-translucent: rgba(255, 255, 255, 0.72);
   --background-secondary: rgb(250, 251, 255);
 
   --border-colour: rgb(237, 239, 245);
